# agentsmithy

./: .env.sample  .gitignore  .pylintrc  Makefile  README.md  RELEASES.md  agent_bar_v2_config.json  check_license.sh  generate_custom_instructions.py  init.json.sample  init_session.sh  license_check.sh  pyproject.toml  replace_model.py  report.html  setup.md  test_all_use_cases_v2.py  test_descriptions.py
.github/workflows/: .github-ci.yml
ChatbotUI/: README.md  package-lock.json  package.json
Runtime_env/: download_wheels.py  pyproject.toml
Runtime_envs/Cloud_Run/deployment/env/: dev.yaml
agent_bar_v2/: .env.sample  __init__.py  agent.py  agent_engine_app.py  industry_prompts.py
agent_bar_v2/agent_use_case_golden_template/: README.md  agent.py  config.py  prompts.py  tools.py
agent_bar_v2/agent_use_case_golden_template/sub_agents/my_sub_agent/: agent.py
agent_bar_v2/app_utils/: .requirements.txt  deploy.py  telemetry.py  typing.py
agent_bar_v2/callbacks/: system_instructions_callback.py
agent_bar_v2/subagents/: agent_registry.py  industry_prompts.py
agent_bar_v2/subagents/content_archive_engine/: .env.example  agent.py  tools.py
agent_bar_v2/subagents/contract_creation/: agent.py  prompt.py
agent_bar_v2/subagents/contract_review/: agent.py
agent_bar_v2/subagents/cross_industry/cloud_finops_guru/: agent.py  config.py  main.py  visualizer.py
agent_bar_v2/subagents/cross_industry/contract_creation/: agent.py  config.py  prompts.py  tools.py
agent_bar_v2/subagents/cross_industry/contract_review/: config.py
agent_bar_v2/subagents/cross_industry/drive_agent/: __init__.py  agent.py  prompt.py  tools.py
agent_bar_v2/subagents/cross_industry/knowledge_graph_builder/: README.md  __init__.py  agent.py  config.py  prompts.py  tools.py
agent_bar_v2/subagents/cross_industry/legal_guardian/: agent.py  prompts.py
agent_bar_v2/subagents/cross_industry/meeting_intelligence/: __init__.py  agent.py  config.py  prompts.py  tools.py
agent_bar_v2/subagents/cross_industry/product_ad_generation/: prompt.py
agent_bar_v2/subagents/cross_industry/proposal_pitch_factory/: agent.py  prompts.py
agent_bar_v2/subagents/cross_industry/proposal_writer/: agent.py  prompt.py
agent_bar_v2/subagents/cross_industry/storage_agent/: __init__.py  agent.py  config.py  prompt.py  tools.py
agent_bar_v2/subagents/customer_support_hub/: README.md  pyproject.toml
agent_bar_v2/subagents/customer_support_hub/src/agents/customer_support_hub/: agent.py  prompts.py
agent_bar_v2/subagents/customer_support_hub/src/agents/customer_support_hub/sub_agents/: __init__.py
agent_bar_v2/subagents/customer_support_hub/src/agents/customer_support_hub/sub_agents/customer_support/sub_agents/product_condition/: agent.py  prompts.py
agent_bar_v2/subagents/customer_support_hub/src/agents/customer_support_hub/sub_agents/customer_support/sub_agents/product_condition/data/: store_locations.csv
agent_bar_v2/subagents/customer_support_hub/src/agents/customer_support_hub/sub_agents/customer_support/sub_agents/refund_issue/: agent.py
agent_bar_v2/subagents/cyber_incident_response/: cyber_incident_response_agent.py
agent_bar_v2/subagents/fsi/banking_modernization_2/: __init__.py  banking_modernization_agent.py
agent_bar_v2/subagents/hcls/cardiology_consult/: agent.py  (+5 more)
agent_bar_v2/subagents/investment_strategy/: __init__.py  prompt.py
agent_bar_v2/subagents/media/content_archive_engine/: Makefile  README.md  __init__.py  agent.py  config.py  prompts.py  pyproject.toml  tools.py
agent_bar_v2/subagents/media/content_archive_engine/sub_agents/: __init__.py
agent_bar_v2/subagents/media/content_archive_engine/sub_agents/content_moderation/: agent.py  callbacks.py  config.py  prompts.py  tools.py
agent_bar_v2/subagents/media/content_archive_engine/sub_agents/transcription/: agent.py  tools.py
agent_bar_v2/subagents/media/content_archive_engine/sub_agents/video_analysis/: __init__.py  agent.py  callbacks.py  config.py  prompts.py  tools.py
agent_bar_v2/subagents/media/global_content_localizer/: Makefile  README.md  agent.py  config.py  prompts.py  pyproject.toml  tools.py
agent_bar_v2/subagents/media/global_content_localizer/sub_agents/translation/: agent.py  callbacks.py  config.py  prompts.py  tools.py  translation_codes.json
agent_bar_v2/subagents/retail/intelligent_inventory_manager/: README.md  agent.py  config.py  prompts.py  pyproject.toml
agent_bar_v2/subagents/retail/intelligent_inventory_manager/data/: inventory.csv  products.csv  stores.csv
agent_bar_v2/subagents/retail/intelligent_inventory_manager/sub_agents/catalog_enrichment/: __init__.py  agent.py  prompts.py  tools.py
agent_bar_v2/subagents/retail/intelligent_inventory_manager/sub_agents/nl2sql/: agent.py  prompts.py  tools.py
agent_bar_v2/subagents/utility/: __init__.py
agent_bar_v2/subagents/utils/: model.py
agent_bar_v2/subagents/weather_agent/: agent.py  prompt.py
agent_bar_v2/tools/: context_based_toolset.py
agentbar/: .env.sample
agentbar/subagents/: finance_agent.py  joke_agent.py
assets/scripts/: setup.py
deployment/: README.md
deployment/cloud_run/: Dockerfile  main.py  requirements.txt
deployment/terraform/: apis.tf  artifact_registry.tf  bigquery.tf  discoveryengine.tf  iam.tf  locals.tf  outputs.tf  provider.tf  spanner.tf  storage.tf  variables.tf
deployment/terraform/vars/: auto.tfvars  dev.tfvars
docs/: developer_guide.md
test/: README.md  load_test.py
test/eval/: test_eval_cross_legal_guardian.py  test_eval_media_content_archive_engine.py  test_eval_media_global_content_localizer.py  test_eval_meeting_intelligence.py  test_eval_retail_customer_support_hub.py
test/eval/evalsets/: eval_cross_legal_guardian.json  eval_hcls_cardiology_consult.json  eval_hcls_clinical_handover.json  eval_hcls_provider_directory_search.json  eval_hcls_research_accelerator.json  eval_media_content_archive_engine.json  eval_media_global_content_localizer.json  eval_meeting_intelligence.json  eval_retail_customer_support_hub.json  eval_retail_intelligent_inventory_manager.json  test_config.json
(+224 files in other folders)
