[project]
name = "global-content-localizer"
version = "0.1.0"
description = "Global Content Localizer Agent"
authors = [{ name = "Agent Developer", email = "agent-developer@google.com" }]
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.1.0",
    "google-genai",
    "python-dotenv",
    "google-cloud-translate",
    "google-cloud-vision",
    "fpdf",
    "google-cloud-speech",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "ruff",
    "basedpyright",
    "deptry",
]
